feat(login form)

--- a/dash.html
+++ b/dash.html
@@ -17,44 +17,24 @@
   <body>
     <header>
       <div class="topnav">
-        <a href="#index" class="active menu-bar">Home</a>
-        <a href="#dash" class="menu-bar">Dashboard</a>
-        <a href="#register" class="menu-bar acc">Create Account</a>
+        <a href="#index" class="menu-bar">Home</a>
+        <a href="#login" class="active menu-bar">Dashboard</a>
+        <a href="#register" class="menu-bar">Create Account</a>
         <a href="#contact" class="menu-bar">Contact</a>
         <a href="#about" class="menu-bar">About</a>
       </div>
     </header>
     <section class="welcome-container">
-      <div class="welcome">
-        <span class="welcome-text"
-          >Welcome to piça Bank O banco que só enrigece</span
-        >
-      </div>
       <div class="welcome-center">
         <img sizes="(max-width: 256px) 50vw, 256px" srcset="https://assets.bancointer.com.br/static/6ec0307c19457fc7f832fe4d6fd28cdb/f2e6d/inter-invest-home-desktop.png 114w,
 https://assets.bancointer.com.br/static/6ec0307c19457fc7f832fe4d6fd28cdb/447ef/inter-invest-home-desktop.png 228w,
 https://assets.bancointer.com.br/static/6ec0307c19457fc7f832fe4d6fd28cdb/b02e5/inter-invest-home-desktop.png 456w,
 https://assets.bancointer.com.br/static/6ec0307c19457fc7f832fe4d6fd28cdb/502b1/inter-invest-home-desktop.png 457w" src="https://assets.bancointer.com.br/static/6ec0307c19457fc7f832fe4d6fd28cdb/b02e5/inter-invest-home-desktop.png" alt="Um rapaz sorrindo acessando o App do Inter ao celular" loading="lazy">
       </div>
-      <div class="welcome-2">
-        <span class="welcome-text"
-          >Abra já sua conta</span
-        >
-      </div>
       <div class="welcome-3">
         <span class="welcome-text"
-          >Patrocinador oficial do xvideos 2023</span
+          >Sucesso, Logado</span
         >
-      </div>
-    </section>
-    <section class="features-container">
-      <div class="features">
-        <ul> O unico banco com
-        <li>Cripto moeda própia</li>
-        <li>Cambio</li>
-        <li>Gerenciamento de gastos</li>
-        <li>Cassino online</li>
-      </ul>
       </div>
     </section>
     <footer></footer>
